--- a/index.html
+++ b/index.html
@@ -23,14 +23,12 @@
 
 <Div id="contenidos">
 	<header>
+		<h6>HOla esto es un cambio</h6>
 	    <img src="img/BANNER2.jpg" WIDTH=100% HEIGHT=250px  alt="FLOWERS" box-shadow: 2px 2px 5px  #D88585;>
-		
+		<img src="img/BIENVENIDOS.jpg" WIDTH=30% HEIGHT=50px  alt="FLOWERS" box-shadow: 2px 2px 5px  #D88585;>
 		</object>
 
-		<script>
-
-		<center> src="http://h2.flashvortex.com/display.php?id=2_1461346920_63848_974_0_468_60_9_2_34" type="text/javascript" WIDTH=200% HEIGHT=500px  alt="FLOWERS" box-shadow: 2px 2px 5px  #D88585 </center>
-		</script>
+		<script src="http://h2.flashvortex.com/display.php?id=2_1461346920_63848_974_0_468_60_9_2_34" type="text/javascript" WIDTH=100% HEIGHT=250px  alt="FLOWERS" box-shadow: 2px 2px 5px  #D88585></script>
 
 	</header>
 
