--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <Div id="contenidos">
 	<header>
 
-	    <img src="img/BANNER2.jpg" WIDTH=100% HEIGHT=250px  alt="FLOWERS" box-shadow: 2px 2px 5px  #D88585;>
+	    <img src="img/BANNER.jpg" WIDTH=100% HEIGHT=250px  alt="FLOWERS" box-shadow: 2px 2px 5px  #D88585;>
 		<img src="img/BIENVENIDOS.jpg" WIDTH=30% HEIGHT=50px  alt="FLOWERS" box-shadow: 2px 2px 5px  #D88585;>
 		</object>
 
