--- a/index.html
+++ b/index.html
@@ -29,9 +29,12 @@
 	</header>
 <nav>
 	<ul class="menu">
-		<li><a href="http://www.google.com" class="menu">Google</a></li>
-		<li><a href="http://www.unad.edu.co"class="menu">Universidad UNAD</a></li>
-		<li><a href="httP://www.enter.co" class="menu">Revista Enter</a></li>
+		<li><a href="INICIO.html" class="menu">Google</a></li>
+		<li><a href="MISION Y VICION.html"class="menu">MISION Y VISION</a></li>
+		<li><a href="GALERIA.html" class="menu">GALERIA</a></li>
+		<li><a href="VIDEOS.html" class="menu">VIDEOS</a></li>
+		<li><a href="CONCERVACION.html" class="menu">CONCERVACION</a></li>
+		<li><a href="ARTE.html" class="menu">ARTE</a></li>
 	</ul>
 </nav>
 
