--- a/index.html
+++ b/index.html
@@ -21,16 +21,14 @@
 <Div id="contenidos">
 	<header>
 	    <img src="img/BANNER.jpg" WIDTH=100% HEIGHT=250px  alt="FLOWERS" box-shadow: 2px 2px 5px  #D88585;>
-		<img src="img/BIENVENIDOS.jpg" WIDTH=30% HEIGHT=50px  alt="FLOWERS" box-shadow: 2px 2px 5px  #D88585;>
+		
 		</object>
-
-		<script src="http://h2.flashvortex.com/display.php?id=2_1461346920_63848_974_0_468_60_9_2_34" type="text/javascript" WIDTH=100% HEIGHT=250px  alt="FLOWERS" box-shadow: 2px 2px 5px  #D88585></script>
 
 	</header>
 <nav>
 	<ul class="menu">
-		<li><a href="INICIO.html" class="menu">Google</a></li>
-		<li><a href="MISION Y VICION.html"class="menu">MISION Y VISION</a></li>
+		<li><a href="index.html" class="menu">INICIO</a></li>
+		<li><a href="MISION Y VISION.html"class="menu">MISION Y VISION</a></li>
 		<li><a href="GALERIA.html" class="menu">GALERIA</a></li>
 		<li><a href="VIDEOS.html" class="menu">VIDEOS</a></li>
 		<li><a href="CONCERVACION.html" class="menu">CONCERVACION</a></li>
@@ -41,6 +39,9 @@
 <section>
 	<article>
 		<h2>Nuestros productos</h2>
+<center>
+		<img src="img/BIENVENIDOS.jpg" WIDTH=30% HEIGHT=50px  alt="FLOWERS" box-shadow: 2px 2px 5px  #D88585;>
+	</center>
     <p>
     	Brindaremos nuestros mejores servicios, ante todo tipo de celebridades, bautizos, primeras comuniones, matrimonios, confirmaciones, grados y muchos mas eventos, rodeados de la belleza encantadora de las flores.
     </p>
