--- a/INICIO.html
+++ b/INICIO.html
@@ -43,19 +43,18 @@
 		<img src="img/BIENVENIDOS.jpg" WIDTH=30% HEIGHT=50px  alt="FLOWERS" box-shadow: 2px 2px 5px  #D88585;>
 	</center>
     <p>
+    	
     	Brindaremos nuestros mejores servicios, ante todo tipo de celebridades, bautizos, primeras comuniones, matrimonios, confirmaciones, grados y muchos mas eventos, rodeados de la belleza encantadora de las flores.
     </p>
 	</article>
-
-<center>
-<iframe width="500" height="430" src="http://www.cincopa.com/media-platform/iframe.aspx?fid=AANADZdEanx6" frameborder="0" allowfullscreen scrolling="no"></iframe><noscript><span>New Gallery 2016/4/17</span><span>originaldate</span><span> 1/1/0001 6:00:00 AM</span><span>width</span><span> 220</span><span>height</span><span> 285</span><span>originaldate</span><span> 1/1/0001 6:00:00 AM</span><span>height</span><span> 253</span><span>width</span><span> 199</span><span>camerasoftware</span><span> Google</span><span>originaldate</span><span> 1/1/0001 6:00:00 AM</span><span>width</span><span> 225</span><span>height</span><span> 225</span><span>originaldate</span><span> 1/1/0001 6:00:00 AM</span><span>width</span><span> 1600</span><span>height</span><span> 1280</span><span>originaldate</span><span> 1/1/0001 6:00:00 AM</span><span>width</span><span> 505</span><span>height</span><span> 486</span><span>originaldate</span><span> 1/1/0001 6:00:00 AM</span><span>width</span><span> 275</span><span>height</span><span> 183</span><span>originaldate</span><span> 1/1/0001 6:00:00 AM</span><span>width</span><span> 508</span><span>height</span><span> 492</span><span>originaldate</span><span> 1/1/0001 6:00:00 AM</span><span>width</span><span> 504</span><span>height</span><span> 503</span><span>originaldate</span><span> 1/1/0001 6:00:00 AM</span><span>width</span><span> 1000</span><span>height</span><span> 621</span><span>originaldate</span><span> 1/1/0001 6:00:00 AM</span><span>width</span><span> 350</span><span>height</span><span> 350</span></noscript>
-</center>
 
 </section>
 
 <aside>
     <ul>
-		
+		<li><a href="http://www.google.com">Google</a></li>
+		<li><a href="http://www.unad.edu.co">Universidad UNAD</a></li>
+		<li><a href="httP://www.enter.co">Revista Enter</a></li>
 	</ul>	
 </aside>
 
