--- a/pagina 1.html
+++ b/pagina 1.html
@@ -3,6 +3,9 @@
 
 <html lang="es" class"no-js">
 
+ <!-- Hola soy un comentario...  -->
+
+
 <head>
 	
 	<meta charset="UTF-8">
@@ -24,18 +27,18 @@
 		
 		</object>
 
-	
+		<script>
+
+		<center> src="http://h2.flashvortex.com/display.php?id=2_1461346920_63848_974_0_468_60_9_2_34" type="text/javascript" WIDTH=200% HEIGHT=500px  alt="FLOWERS" box-shadow: 2px 2px 5px  #D88585 </center>
+		</script>
 
 	</header>
 
 <nav>
 	<ul class="menu">
-		<li><a href="index.html" class="menu">INICIO</a></li>
-		<li><a href="MISION Y VISION.html"class="menu">MISION Y VISION</a></li>
-		<li><a href="GALERIA.html" class="menu">GALERIA</a></li>
-		<li><a href="VIDEOS.html" class="menu">VIDEOS</a></li>
-		<li><a href="CONCERVACION.html" class="menu">CONCERVACION</a></li>
-		<li><a href="ARTE.html" class="menu">ARTE</a></li>
+		<li><a href="http://www.google.com" class="menu">Google</a></li>
+		<li><a href="http://www.unad.edu.co"class="menu">Universidad UNAD</a></li>
+		<li><a href="httP://www.enter.co" class="menu">Revista Enter</a></li>
 	</ul>
 </nav>
 
@@ -55,7 +58,9 @@
 
 <aside>
     <ul>
-		
+		<li><a href="http://www.google.com">Google</a></li>
+		<li><a href="http://www.unad.edu.co">Universidad UNAD</a></li>
+		<li><a href="httP://www.enter.co">Revista Enter</a></li>
 	</ul>	
 </aside>
 
