--- a/pagina 2.html
+++ b/pagina 2.html
@@ -3,6 +3,9 @@
 
 <html lang="es" class"no-js">
 
+ <!-- Hola soy un comentario...  -->
+
+
 <head>
 	
 	<meta charset="UTF-8">
@@ -20,28 +23,28 @@
 
 <Div id="contenidos">
 	<header>
-	    <img src="img/BANNER.jpg" WIDTH=100% HEIGHT=250px  alt="FLOWERS" box-shadow: 2px 2px 5px  #D88585;>
+	    <img src="img/BANNER2.jpg" WIDTH=100% HEIGHT=250px  alt="FLOWERS" box-shadow: 2px 2px 5px  #D88585;>
 		
 		</object>
 
+		<script>
+
+		<center> src="http://h2.flashvortex.com/display.php?id=2_1461346920_63848_974_0_468_60_9_2_34" type="text/javascript" WIDTH=200% HEIGHT=500px  alt="FLOWERS" box-shadow: 2px 2px 5px  #D88585 </center>
+		</script>
+
 	</header>
+
 <nav>
 	<ul class="menu">
-		<li><a href="index.html" class="menu">INICIO</a></li>
-		<li><a href="MISION Y VISION.html"class="menu">MISION Y VISION</a></li>
-		<li><a href="GALERIA.html" class="menu">GALERIA</a></li>
-		<li><a href="VIDEOS.html" class="menu">VIDEOS</a></li>
-		<li><a href="CONCERVACION.html" class="menu">CONCERVACION</a></li>
-		<li><a href="ARTE.html" class="menu">ARTE</a></li>
+		<li><a href="http://www.google.com" class="menu">Google</a></li>
+		<li><a href="http://www.unad.edu.co"class="menu">Universidad UNAD</a></li>
+		<li><a href="httP://www.enter.co" class="menu">Revista Enter</a></li>
 	</ul>
 </nav>
 
 <section>
 	<article>
 		<h2>Nuestros productos</h2>
-<center>
-		<img src="img/BIENVENIDOS.jpg" WIDTH=30% HEIGHT=50px  alt="FLOWERS" box-shadow: 2px 2px 5px  #D88585;>
-	</center>
     <p>
     	Brindaremos nuestros mejores servicios, ante todo tipo de celebridades, bautizos, primeras comuniones, matrimonios, confirmaciones, grados y muchos mas eventos, rodeados de la belleza encantadora de las flores.
     </p>
